namespace ApplicationCore.Domain.EN;

public class Categoria
{
    public virtual long Id { get; set; }
    public virtual string Nombre { get; set; } = string.Empty;
}
