namespace ApplicationCore.Domain.Enums;

public enum EstadoPedido
{
    carrito,
    realizado,
    comprado,
    rechazado,
    recibido,
    validado
}
