@startuml Diagrama 
skinparam classAttributeIconSize 0
title Diagrama de Clases - Tienda Online de Zapatos (v2.0)

' ===== ENUMS =====
enum EstadoPedido {
    carrito
    realizado
    comprado
    rechazado
    recibido
    validado
}

' ===== CLASES PRINCIPALES =====

class Usuario {
    - id : long
    - nombre : String
    - email : String
    - contrasenya : String
    - telefono : String?
    - direccion : String?
    - rol : String?
    - nombreEnvio : String?
    - direccionEnvio : String?
    - ciudadEnvio : String?
    - cpEnvio : String?
    - telefonoEnvio : String?
}

class Producto {
    - id : long
    - nombre : String
    - descripcion : String?
    - precio : decimal
    - tallasDisponibles : List<String>
    - fotos : List<String>?
    - stock : int
    - destacado : boolean
    - color : String?
}

class ItemPedido {
    - id : long
    - productoId : long
    - cantidad : int
    - talla : String?
}

class Pedido {
    - id : long
    - fecha : DateTime
    - total : decimal
    - direccionEnvio : String
    - estado : EstadoPedido
    - usuarioId : long
    - items : List<ItemPedido>
}

class Carrito {
    - id : long
    - total : decimal
    - fechaCreacion : DateTime
    - usuarioId : long
    - items : List<ItemPedido>
}

class Ajustes {
    - id : long
    - tema : String
    - notificaciones : boolean
    - usuarioId : long
}

class Favoritos {
    - id : long
    - fechaCreacion : DateTime
    - usuarioId : long
    - productoId : long
}

class Valoracion {
    - id : long
    - valor : int
    - comentario : String?
    - usuarioId : long
    - productoId : long
}

class Sesion {
    - id : long
    - fechaInicio : DateTime
    - fechaFin : DateTime?
    - activa : boolean
    - usuarioId : long
}

class Categoria {
    - id : long
    - nombre : String
}

class Tarjeta {
    - id : long
    - marca : String
    - numeroEnmascarado : String
    - ultimos4 : String
    - mesExp : int
    - anioExp : int
    - nombreTitular : String
    - esPredeterminada : boolean
    - fechaAlta : DateTime
    - usuarioId : long
}

class Perfil {
    - id : long
    - nombre : String
    - email : String
    - contrasenya : String
    - telefono : String?
    - usuarioId : long
}

class Pago {
    - id : long
    - metodoPago : String
    - fechaPago : DateTime
    - monto : decimal
    - pedidoId : long?
}

class Ayuda {
    - id : long
    - pregunta : String
    - respuesta : String?
    - usuarioId : long
}

' ===== RELACIONES =====

' Relaciones de Usuario
Usuario "1" --> "*" Pedido : realiza >
Usuario "1" --> "1" Carrito : posee >
Usuario "1" --> "*" Ajustes : configura >
Usuario "1" --> "*" Sesion : inicia >
Usuario "1" --> "*" Tarjeta : tiene >
Usuario "1" --> "1" Perfil : posee >
Usuario "1" --> "*" Ayuda : consulta >
Usuario "1" --> "*" Favoritos : gestiona >
Usuario "1" --> "*" Valoracion : realiza >

' Relaciones de Pedido y Carrito
Pedido "1" --> "*" ItemPedido : contiene >
Carrito "1" --> "*" ItemPedido : contiene >
Pedido "1" --> "0.1" Pago : procesa >

' Relaciones de ItemPedido
ItemPedido "*" --> "1" Producto : referencia >

' Relaciones de Favoritos y Valoración
Favoritos "*" --> "1" Producto : marca >
Valoracion "*" --> "1" Producto : valora >

' Relaciones de Enums
Pedido --> EstadoPedido : estado >

@enduml